--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
 body
 {
-    background:floralwhite;
-    color:black;
+    background:darkblue;
+    color:white;
     font-size:12px;
-    line-height:18px;
+    line-height:22px;
     font-family:"Comfortaa",sans-serif;
     margin:0;
     user-select:none;
-}
-
-ul
-{
-    list-style-type:none;
-    padding-left:0;
 }
 
 a
@@ -44,13 +38,13 @@ h1
 
 h2
 {
-    font-size:medium;
+    font-size:large;
 }
 
 h3
 {
-    color:gray;
-    font-size:small;
+    color:darkorange;
+    font-size:medium;
 }
 
 main
@@ -58,10 +52,12 @@ main
     background:white;
     border:solid black 1px;
     box-shadow:5px 5px 5px gray;
+    color:black;
+    font-size:medium;
     margin:10px;
     margin-left:auto;
     margin-right:auto;
-    max-width:320px;
+    max-width:500px;
     padding:10px;
     user-select:text;
 }
@@ -81,6 +77,23 @@ footer
     text-align:center;
 }
 
+figure
+{
+    border:dotted gray 1px;
+    padding:3px;
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+figure img{
+    width:100%;
+}
+
+figure figcaption{
+    font-style:italic;
+}
+
 a img
 {
     width: 18px;
@@ -88,6 +101,51 @@ a img
     padding:0;
     padding-right:2px;
     vertical-align:bottom;
-    filter: saturate(0);
     object-fit: fill;
+}
+
+.speech {
+    font-size:large;
+    font-weight:bold;
+    background: orange;
+    padding: 10px;   
+    position:relative;
+    text-align:center;
+}
+
+.speech::after {
+    content:"";
+    position:absolute;
+    left:0;
+    top:50%;
+    width:0;
+    height:0;
+    border:20px solid transparent;
+    border-right-color:orange;
+    border-left:0;
+    border-bottom:0;
+    margin-top:-10px;
+    margin-left:-20px;
+}
+
+.speech.left::after{
+    border-right-color:orange;
+    border-left:0;
+}
+
+#sidebar{
+    background:white;
+    color:black;
+    max-width:320px;
+    padding:10px;
+    position:fixed;
+    right:0;
+}
+
+.hanging {
+    margin-left:2em;
+}
+
+.note {
+    color:darkorange;
 }
